tests/snapshots/preview__preview_plus@004.snap
---
source: tests/preview.rs
description: "input: items [\"a\", \"b\", \"c\"]\noptions: --preview echo {+} -m\nafter:\n  @shift Tab"
---
"                                        │b c                                    "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
">>c                                     │                                       "
" >b                                     │                                       "
"  a                                     │                                       "
"  3/3 [2]                            2/0│                                       "
">                                       │                                       "
cursor: (24, 3)
