tests/snapshots/preview__preview_preserve_quotes.snap
---
source: tests/preview.rs
expression: buf + & cursor_pos
---
"                                        │X'"ABC"'X                              "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"> '"ABC"'                               │                                       "
"  1/1                                0/0│                                       "
">                                       │                                       "
cursor: (24, 3)
