tests/snapshots/preview__preview_pty_linux.snap
---
source: tests/preview.rs
expression: buf + & cursor_pos
---
"                                        │YES                                    "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"> x                                     │                                       "
"  1/1                                0/0│                                       "
">                                       │                                       "
cursor: (24, 3)
