tests/snapshots/preview__preview_window_down@001.snap
---
source: tests/preview.rs
description: "input: items [\"a\", \"b\"]\noptions: --preview printf \"=%.0s\\n\" $(seq 1 1000) --preview-window down"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  b                                                                             "
"> a                                                                             "
"  2/2                                                                        0/0"
">                                                                               "
"────────────────────────────────────────────────────────────────────────────────"
"=                                                                               "
"=                                                                               "
"=                                                                               "
"=                                                                               "
"=                                                                               "
"=                                                                               "
"=                                                                               "
"=                                                                               "
"=                                                                               "
"=                                                                               "
"=                                                                               "
cursor: (12, 3)
