tests/snapshots/preview__preview_window_left_neg.snap
---
source: tests/preview.rs
description: "input: items [\"a\", \"b\", \"c\"]\noptions: --preview printf \"=%.0s\\n\" $(seq 1 1000) --preview-window left:-10"
---
"=                                                                    │          "
"=                                                                    │          "
"=                                                                    │          "
"=                                                                    │          "
"=                                                                    │          "
"=                                                                    │          "
"=                                                                    │          "
"=                                                                    │          "
"=                                                                    │          "
"=                                                                    │          "
"=                                                                    │          "
"=                                                                    │          "
"=                                                                    │          "
"=                                                                    │          "
"=                                                                    │          "
"=                                                                    │          "
"=                                                                    │          "
"=                                                                    │          "
"=                                                                    │          "
"=                                                                    │  c       "
"=                                                                    │  b       "
"=                                                                    │> a       "
"=                                                                    │  3/3  0/0"
"=                                                                    │>         "
cursor: (24, 73)
